Fix overflow in aside blocks

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -152,6 +152,7 @@ aside {
     padding: 0 24px;
     border-radius: 16px;
     display: inline-block;
+    width: 100%;
 }
 
 h1, h2 {
